cfn_benchmark/cfn_templates/AmazonScience__Multi-IaC-Eval/multi_iac_eval__task_112.yaml
Description: |
  This stack automates the creation of an EC2 Instance

Parameters:
  LatestAmiId:
    Description: Region specific image from the Parameter Store
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"

  Subnet:
    Description: The subnet to put the instance into
    Type: AWS::EC2::Subnet::Id

  BackupRetentionPeriod:
    Description: The retention period in days for automated backups of the RDS instance
    Type: Number
    Default: 7
    MinValue: 1
    MaxValue: 35

Resources:

  # An IAM role to be assumed by the ec2 service
  IamRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Actions:
          - sts:AssumeRole
      Path: "/"

  # The instance profile to be assumed by the instance
  IamProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref IamRole
      Path: "/"

  # An EC2 Instance using the latest Amazon Linux 2 AMI
  Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      SubnetId: !Ref Subnet
      Monitoring: true
      IamInstanceProfile: !Ref IamProfile
      EbsOptimized: true

  # A relational database service (RDS) instance
  RdsInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceClass: db.t2.micro
      Engine: postgres
      MasterUsername: myusername
      MasterUserPassword: mypassword
      AllocatedStorage: 20
      BackupRetentionPeriod: !Ref BackupRetentionPeriod
      VPCSecurityGroups:
        - !Ref SecurityGroup

  # Security group to control inbound and outbound traffic
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId: !Select [ 2, !Split [ ":", !Ref Subnet ] ]
